[build-system]
requires = [
        ]

[project]
name = "MRLib"
version = "0.0.1"
authors = [
  { name="Pisteur_alpin", email="pisteur.alpin@gmail.com" },
]
description = "Just a simple library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pisteuralpin/MathuRouLib"
"Bug Tracker" = "https://github.com/pisteuralpin/MathuRouLib/issues"